minor update on CBE and PBE calculation codes (python)

--- a/CBE.ipynb
+++ b/CBE.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
    "source": [
     "from calculation import *\n",
     "\n",
-    "HCl = Inert(charge=-1, conc=0.01)\n",
+    "HCl = CBE_Inert(charge=-1, conc=0.01)\n",
     "pH = CBE_calc(HCl)\n",
     "pH.pH_calc()\n",
     "\n",
@@ -69,7 +69,7 @@
    "source": [
     "from calculation import *\n",
     "\n",
-    "NaOH = Inert(charge=1, conc=0.01)\n",
+    "NaOH = CBE_Inert(charge=1, conc=0.01)\n",
     "pH = CBE_calc(NaOH)\n",
     "pH.pH_calc()\n",
     "\n",
@@ -98,8 +98,8 @@
    ],
    "source": [
     "# How about a buffer?\n",
-    "HAc = Acid(charge=0, conc=0.1, Ka=1.8e-5) # acetic acid\n",
-    "NaAc = Inert(charge=1, conc=0.1)\n",
+    "HAc = CBE_Acid(charge=0, conc=0.1, Ka=1.8e-5) # acetic CBE_Acid\n",
+    "NaAc = CBE_Inert(charge=1, conc=0.1)\n",
     "\n",
     "pH = CBE_calc(HAc, NaAc)\n",
     "pH.pH_calc()\n",
@@ -140,7 +140,7 @@
    "source": [
     "# Phosphate buffer?\n",
     "pKa = [1.97, 6.82, 12.5] # data from pKa_data\n",
-    "P = Acid(charge=0, conc=0.1, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.1, pKa=pKa)\n",
     "print(P.alpha(7.0))\n",
     "\n",
     "# Plot\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,9 +170,9 @@
     }
    ],
    "source": [
-    "NH4 = Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
+    "NH4 = CBE_Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
     "pKa = [1.97, 6.82, 12.5]\n",
-    "P = Acid(charge=0, conc=0.01, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.01, pKa=pKa)\n",
     "\n",
     "pH = CBE_calc(NH4, P)\n",
     "pH.pH_calc()\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
    ],
    "source": [
     "# weak base, like Ca(OH)2\n",
-    "CaOH2 = Acid(charge=+2, conc=0.01, pKa=[14 - 1.37, 14 - 2.43])\n",
+    "CaOH2 = CBE_Acid(charge=+2, conc=0.01, pKa=[14 - 1.37, 14 - 2.43])\n",
     "pH = CBE_calc(CaOH2)\n",
     "pH.pH_calc()\n",
     "\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,11 +251,11 @@
     }
    ],
    "source": [
-    "NH4 = Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
+    "NH4 = CBE_Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
     "pKa = [1.97, 6.82, 12.5]\n",
-    "P = Acid(charge=0, conc=0.01, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.01, pKa=pKa)\n",
     "\n",
-    "def ChargeBalance(_Acid, pH):\n",
+    "def ChargeBalance(_CBE_Acid, pH):\n",
     "    Kw = 1.1e-14\n",
     "\n",
     "    h3o = 10.**(-pH)\n",
@@ -264,9 +264,9 @@
     "    pos = h3o\n",
     "    neg = oh\n",
     "\n",
-    "    alpha = _Acid.alpha(pH)\n",
-    "    charge = _Acid.charge\n",
-    "    conc = _Acid.conc\n",
+    "    alpha = _CBE_Acid.alpha(pH)\n",
+    "    charge = _CBE_Acid.charge\n",
+    "    conc = _CBE_Acid.conc\n",
     "\n",
     "    for i in range(len(alpha)):\n",
     "        if charge[i] > 0:\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,9 +310,9 @@
     }
    ],
    "source": [
-    "NH4 = Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
+    "NH4 = CBE_Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
     "pKa = [1.97, 6.82, 12.5]\n",
-    "P = Acid(charge=0, conc=0.01, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.01, pKa=pKa)\n",
     "\n",
     "pH_values = np.linspace(6, 12, 1500)\n",
     "pos = []\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,9 +358,9 @@
     }
    ],
    "source": [
-    "NH4 = Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
+    "NH4 = CBE_Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
     "pKa = [1.97, 6.82, 12.5]\n",
-    "P = Acid(charge=0, conc=0.01, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.01, pKa=pKa)\n",
     "\n",
     "pH_values = np.linspace(6, 12, 1500)\n",
     "pos = []\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,9 +406,9 @@
     }
    ],
    "source": [
-    "NH4 = Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
+    "NH4 = CBE_Acid(charge=1, conc=0.01*3, pKa=9.25)\n",
     "pKa = [1.97, 6.82, 12.5]\n",
-    "P = Acid(charge=0, conc=0.01, pKa=pKa)\n",
+    "P = CBE_Acid(charge=0, conc=0.01, pKa=pKa)\n",
     "\n",
     "pH_values = np.linspace(6, 12, 1500)\n",
     "pos = []\n",
